src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BLANK</fullName>
                </value>
                <value>
                    <fullName>DEZAAN</fullName>
                </value>
                <value>
                    <fullName>HERSHEY</fullName>
                </value>
                <value>
                    <fullName>HUYSMAN</fullName>
                </value>
                <value>
                    <fullName>JOANES</fullName>
                </value>
                <value>
                    <fullName>MACAO</fullName>
                </value>
                <value>
                    <fullName>NEUTRAL</fullName>
                </value>
                <value>
                    <fullName>STARBUCKS</fullName>
                </value>
                <value>
                    <fullName>UNICAO</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>CPKELCO</fullName>
                </value>
                <value>
                    <fullName>DAMIN</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>NICHE</fullName>
                </value>
                <value>
                    <fullName>PLOT</fullName>
                </value>
                <value>
                    <fullName>TRIAL</fullName>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                </value>
                <value>
                    <fullName>OCP</fullName>
                </value>
                <value>
                    <fullName>ASTRA</fullName>
                </value>
                <value>
                    <fullName>RAW MAT</fullName>
                </value>
                <value>
                    <fullName>SEMI FINISH ILHEUS BRAZIL</fullName>
                </value>
                <value>
                    <fullName>ASTRA A</fullName>
                </value>
                <value>
                    <fullName>THIRD PARTY CAKE /RAWMAT</fullName>
                </value>
                <value>
                    <fullName>JB COCOA</fullName>
                </value>
                <value>
                    <fullName>DEZAAN FE</fullName>
                </value>
                <value>
                    <fullName>PT. BUMITANGERANG</fullName>
                </value>
                <value>
                    <fullName>DEZAAN/SINGAPORE</fullName>
                </value>
                <value>
                    <fullName>BT/THIRD_PARTY_CAKE</fullName>
                    <label>BT/THIRD PARTY CAKE</label>
                </value>
                <value>
                    <fullName>SEMI_FINISH_MANNHEIM</fullName>
                    <label>SEMI FINISH MANNHEIM</label>
                </value>
                <value>
                    <fullName>SEMI_FINISH_SINGAPORE</fullName>
                    <label>SEMI FINISH SINGAPORE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Family</controllingField>
            <restricted>true</restricted>
            <valueSetName>BU_Identifier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>By_Product__c</fullName>
        <label>By Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BY PRODUCT</fullName>
                </value>
                <value>
                    <fullName>CORE SUPPLY CHAIN</fullName>
                </value>
                <value>
                    <fullName>INGREDIENT</fullName>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                </value>
                <value>
                    <fullName>PRIVATE LABEL</fullName>
                </value>
                <value>
                    <fullName>RAW MATERIAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Certification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Defects__c</fullName>
        <label>Defects</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Defects</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Development_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>Development Code</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Product Code</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingredient_Commodity__c</fullName>
        <label>Ingredient/Commodity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ingredient_commodity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Product_Config_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Product Config Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Origin</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pack_Size__c</fullName>
        <label>Pack Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pack_Size</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Type__c</fullName>
        <label>Pack Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pack_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Type_del__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Package Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Type__c</fullName>
        <label>Processing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Processing_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Family</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Classification__c</fullName>
        <label>Product Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Config_Count__c</fullName>
        <label>Product Config Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Grade__c</fullName>
        <label>Product Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Grade</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub_Category_2__c</fullName>
        <label>Product Sub Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Sub_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Sub_Category_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub_Category__c</fullName>
        <label>Product Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Sub_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub_Grade__c</fullName>
        <label>Product Sub Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NULL</fullName>
                </value>
                <value>
                    <fullName>NATURAL</fullName>
                </value>
                <value>
                    <fullName>507DP11</fullName>
                </value>
                <value>
                    <fullName>D11AZ</fullName>
                </value>
                <value>
                    <fullName>ALKALISED</fullName>
                </value>
                <value>
                    <fullName>D11CK</fullName>
                </value>
                <value>
                    <fullName>10/12 S7</fullName>
                </value>
                <value>
                    <fullName>10/12 SN</fullName>
                </value>
                <value>
                    <fullName>ALK BLACK</fullName>
                </value>
                <value>
                    <fullName>AJ11P</fullName>
                </value>
                <value>
                    <fullName>D11S</fullName>
                </value>
                <value>
                    <fullName>D11VB</fullName>
                </value>
                <value>
                    <fullName>10/12 SR7</fullName>
                </value>
                <value>
                    <fullName>10/12 S77</fullName>
                </value>
                <value>
                    <fullName>10/12 S8-</fullName>
                </value>
                <value>
                    <fullName>SCRAP</fullName>
                </value>
                <value>
                    <fullName>350DP</fullName>
                </value>
                <value>
                    <fullName>D00ZR</fullName>
                </value>
                <value>
                    <fullName>D11A</fullName>
                </value>
                <value>
                    <fullName>D11A,</fullName>
                </value>
                <value>
                    <fullName>D11AL</fullName>
                </value>
                <value>
                    <fullName>D11B1</fullName>
                </value>
                <value>
                    <fullName>D11BF</fullName>
                </value>
                <value>
                    <fullName>D11BL</fullName>
                </value>
                <value>
                    <fullName>D11BZ</fullName>
                </value>
                <value>
                    <fullName>D11CD</fullName>
                </value>
                <value>
                    <fullName>D11CE</fullName>
                </value>
                <value>
                    <fullName>D11G</fullName>
                </value>
                <value>
                    <fullName>D11GH</fullName>
                </value>
                <value>
                    <fullName>D11KB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Size</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Stream__c</fullName>
        <label>Value Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Value_Stream</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variety__c</fullName>
        <label>Variety</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Variety</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>External_Product_Code__c</columns>
        <columns>Development_Code__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Grade__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>All_Cocoa_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Sub_Category__c</columns>
        <columns>Product_Sub_Category_2__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Development_Code__c</columns>
        <columns>External_Product_Code__c</columns>
        <columns>PRODUCT2.QTY_UNIT_OF_MEASURE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>03-Cocoa and Speciality</value>
        </filters>
        <label>All Cocoa Products</label>
    </listViews>
    <listViews>
        <fullName>All_Dairy_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Sub_Category__c</columns>
        <columns>Product_Sub_Category_2__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Development_Code__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.QTY_UNIT_OF_MEASURE</columns>
        <columns>External_Product_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>04-Dairy,Dairy</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Dairy Products</label>
    </listViews>
    <listViews>
        <fullName>All_Edible_Nuts_Product</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>External_Product_Code__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Sub_Category__c</columns>
        <columns>Product_Sub_Category_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>09-Cashew,10-Peanuts,11-Almond,16-Sesame,22-Hazelnut,25-Pistachio,26-Walnut,29-Super foods</value>
        </filters>
        <label>All Edible Nuts Product</label>
    </listViews>
    <listViews>
        <fullName>List_all_Spice_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Sub_Category__c</columns>
        <columns>Product_Sub_Category_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>12-Spices</value>
        </filters>
        <label>List all Spice Products</label>
    </listViews>
    <listViews>
        <fullName>Vietnam_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Grade__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>ENPLVN Ingredient</value>
        </filters>
        <label>Vietnam Ingredients</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>One_Product_Config_at_any_given_point</fullName>
        <active>true</active>
        <errorConditionFormula>Product_Config_Count__c &gt; 1</errorConditionFormula>
        <errorMessage>There can be only one product config for a product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Updates_to_Active_SAP_Products</fullName>
        <active>true</active>
        <description>This validation rule will prevent any updates to the product fields which are already active in SAP.</description>
        <errorConditionFormula>(NOT(ISNEW())&amp;&amp; NOT((ISBLANK(External_Product_Code__c)))) &amp;&amp; NOT ( $Permission.Olam_Validation_Exception )</errorConditionFormula>
        <errorMessage>You can not modify the product which is already active in SAP</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_making_product_config_tru</fullName>
        <active>true</active>
        <description>NOT(PRIORVALUE(Is_Product_Config_Required__c)) ,</description>
        <errorConditionFormula>AND(Is_Product_Config_Required__c ,  OR(Product_Config_Count__c != 1 , ISBLANK(Product_Config_Count__c ) ,ISBLANK( External_Product_Code__c) ))</errorConditionFormula>
        <errorDisplayField>Is_Product_Config_Required__c</errorDisplayField>
        <errorMessage>There should be a valid product config linked to this product to make this required and External Product Code is mandatory</errorMessage>
    </validationRules>
</CustomObject>